c2prj1_cards/grade.txt
Grading at Tue Aug  7 03:23:07 UTC 2018
Compiling cards.c
cards.c: In function ‘value_letter’:
cards.c:37:3: error: expected ‘;’ before ‘switch’
   switch (c.value){
   ^
cards.c: In function ‘suit_letter’:
cards.c:53:3: error: enumeration value ‘NUM_SUITS’ not handled in switch [-Werror=switch]
   switch(c.suit){
   ^
cards.c: In function ‘card_from_letters’:
cards.c:87:16: error: incompatible types when assigning to type ‘suit_t {aka enum <anonymous>}’ from type ‘char *’
       temp.suit="SPADES";
                ^
cards.c:89:16: error: incompatible types when assigning to type ‘suit_t {aka enum <anonymous>}’ from type ‘char *’
       temp.suit="HEARTS";
                ^
cards.c:91:16: error: incompatible types when assigning to type ‘suit_t {aka enum <anonymous>}’ from type ‘char *’
       temp.suit="DIAMONDS";
                ^
cards.c:93:16: error: incompatible types when assigning to type ‘suit_t {aka enum <anonymous>}’ from type ‘char *’
       temp.suit="CLUBS";
                ^
cards.c: In function ‘card_from_num’:
cards.c:103:14: error: incompatible types when assigning to type ‘suit_t {aka enum <anonymous>}’ from type ‘char *’
     temp.suit="SPADES";
              ^
cards.c:107:14: error: incompatible types when assigning to type ‘suit_t {aka enum <anonymous>}’ from type ‘char *’
     temp.suit="HEARTS";
              ^
cards.c:111:14: error: incompatible types when assigning to type ‘suit_t {aka enum <anonymous>}’ from type ‘char *’
     temp.suit="DIAMONDS";
              ^
cards.c:115:14: error: incompatible types when assigning to type ‘suit_t {aka enum <anonymous>}’ from type ‘char *’
     temp.suit="CLUBS";
              ^
cards.c:101:7: error: unused variable ‘i’ [-Werror=unused-variable]
   int i=0;
       ^
cards.c: In function ‘ranking_to_string’:
cards.c:32:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cards.c: In function ‘value_letter’:
cards.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cards.c: In function ‘suit_letter’:
cards.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
